--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Opexis</title>
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GG6LKZ0VD5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GG6LKZ0VD5');
+  </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
